tests/reference/asr-test_compare_01-c594bbe.stderr
semantic error: Type mismatch in comparison operator, the types must be compatible
 --> tests/errors/test_compare_01.py:6:11
  |
6 |     print(i16(x) > f32(y))
  |           ^^^^^^   ^^^^^^ type mismatch ('i16' and 'f32')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
